[package]
name = "sxutil"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
protobuf-codegen = "3.2.0"
protoc-bin-vendored = "3.0.0"
tonic-build = "0.9.2"

[dependencies]
build-time = "0.1.3"
env_logger = "0.10.0"
git-version = "0.3.5"
log = "0.4.17"
once_cell = "1.18.0"
prost = "0.11.9"
prost-types = "0.11.9"
protobuf = "3.2.0"
rs-snowflake = "0.6.0"
synerex_proto = { git = "https://github.com/exdata-inc/synerex_proto.git", rev = "a2cad4f8278c4c5ceb4d73f97fd5e5d5c3ffda82"}
synerex_api = { git = "https://github.com/exdata-inc/synerex_api.git", rev = "9c32bb01d0440cf2300609815adf7129ac0f8da5"}
synerex_nodeapi = { git = "https://github.com/exdata-inc/synerex_nodeapi.git", rev = "930b214b8ca7fe424d72279bff64fddf39fe245c"}
systemstat = "0.2.3"
tokio = { version = "1.28.2", features = ["full"] }
tonic = "0.9.2"
